<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/state_machine_text"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/accel_x"
        android:layout_width="282dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailer_sideview" />

    <TextView
        android:id="@+id/accel_y"
        android:layout_width="282dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trailer_rearview" />

    <ImageView
        android:id="@+id/trailer_sideview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/front_and_rear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trailer_sideview" />

    <ImageView
        android:id="@+id/trailer_rearview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/left_and_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/axis_swap_button"
        app:srcCompat="@drawable/trailer_rearview" />

    <ImageView
        android:id="@+id/trailer_sideview_front_arrow"
        android:layout_width="33dp"
        android:layout_height="44.5dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/front_up_and_down"
        app:layout_constraintStart_toEndOf="@+id/trailer_sideview"
        app:layout_constraintTop_toTopOf="@+id/trailer_sideview"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:id="@+id/trailer_rearview_right_arrow"
        android:layout_width="33dp"
        android:layout_height="44.5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/right_up_and_down"
        app:layout_constraintStart_toEndOf="@+id/trailer_rearview"
        app:layout_constraintTop_toTopOf="@+id/trailer_rearview"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:id="@+id/trailer_sideview_rear_arrow"
        android:layout_width="33dp"
        android:layout_height="44.5dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/rear_up_and_down"
        app:layout_constraintEnd_toStartOf="@+id/trailer_sideview"
        app:layout_constraintTop_toTopOf="@+id/trailer_sideview"
        app:srcCompat="@drawable/arrow_down" />

    <ImageView
        android:id="@+id/trailer_rearview_left_arrow"
        android:layout_width="33dp"
        android:layout_height="44.5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/left_up_and_down"
        app:layout_constraintEnd_toStartOf="@+id/trailer_rearview"
        app:layout_constraintTop_toTopOf="@+id/trailer_rearview"
        app:srcCompat="@drawable/arrow_down" />

    <ImageButton
        android:id="@+id/front_rear_swap_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/front_rear_swap"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/trailer_sideview"
        app:layout_constraintTop_toTopOf="@+id/trailer_sideview"
        app:srcCompat="@drawable/swap_button" />

    <ImageButton
        android:id="@+id/left_right_swap_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/left_right_swap_button"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/trailer_rearview"
        app:layout_constraintTop_toTopOf="@+id/trailer_rearview"
        app:srcCompat="@drawable/swap_button" />

    <ImageButton
        android:id="@+id/axis_swap_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/asix_swap_button"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accel_x"
        app:srcCompat="@drawable/swap_button" />

    <Button
        android:id="@+id/save_center_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save_center_adjust_button"
        android:text="@string/save_current_as_center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>